# bin2array

./: CMakeLists.txt
src/: main.c
